--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Desafío entregable N° 1 curso - JS</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='entregable2.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/style.css'>
+    
 
-    s
 </head>
 <body>
-    <img src="funciones.jpg" >
+    <img src="desafio1.png">
+    <h1>Ender Rodriguez - Comision 43600 Coder House</h1>
 </body>
+<script src='/js/app.js'></script>
 </html>
